Get Any23 closer to building and testing with Java-9
Signed-off-by: Peter Ansell <p_ansell@yahoo.com>