@@ -231,38 +231,50 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     <javac.src.version>1.8</javac.src.version>
     <javac.target.version>1.8</javac.target.version>
+
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
     <implementation.build>${scmBranch}@r${buildNumber}</implementation.build>
     <implementation.build.tstamp>${maven.build.timestamp}</implementation.build.tstamp>
-    <slf4j.logger.version>1.7.21</slf4j.logger.version>
-    <rdf4j.version>2.1.3</rdf4j.version>
+
+    <httpclient.version>4.5.3</httpclient.version>
+    <httpcore.version>4.4.6</httpcore.version>
+    <slf4j.logger.version>1.7.25</slf4j.logger.version>
+    <rdf4j.version>2.2.2</rdf4j.version>
     <semargl.version>0.7</semargl.version>
+
+    <!-- Overridden in profiles to add JDK specific arguments to surefire -->
+    <surefire-extra-args></surefire-extra-args>
+
+    <!-- Used to track API changes based on Semantic Versioning -->
     <latest.stable.released>2.0</latest.stable.released>
+
+    <!-- Google Analytics id for website -->
     <form.tracker.id>UA-59636188-1</form.tracker.id>
 
     <!-- Maven Plugin Versions -->
-    <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
     <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-    <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
+    <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
     <maven-assembly-plugin.version>3.0.0</maven-assembly-plugin.version>
-    <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
+    <appassembler-maven-plugin.version>2.0.0</appassembler-maven-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
-    <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
-    <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-    <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
-    <maven-site-plugin.version>3.4</maven-site-plugin.version>
-    <maven-changes-plugin.version>2.11</maven-changes-plugin.version>
-    <maven-project-info-reports-plugin.version>2.8.1</maven-project-info-reports-plugin.version>
+    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
+    <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+    <maven-site-plugin.version>3.6</maven-site-plugin.version>
+    <maven-changes-plugin.version>2.12.1</maven-changes-plugin.version>
+    <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
     <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
-    <apache-rat-plugin.version>0.11</apache-rat-plugin.version>
-    <maven-source-plugin.version>2.4</maven-source-plugin.version>
+    <apache-rat-plugin.version>0.12</apache-rat-plugin.version>
+    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
     <!--
@@ -290,42 +302,42 @@
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>4.5.2</version>
+        <version>${httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient-cache</artifactId>
-        <version>4.5.2</version>
+        <version>${httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>fluent-hc</artifactId>
-        <version>4.5.2</version>
+        <version>${httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient-osgi</artifactId>
-        <version>4.5.2</version>
+        <version>${httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpmime</artifactId>
-        <version>4.5.2</version>
+        <version>${httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore-osgi</artifactId>
-        <version>4.4.5</version>
+        <version>${httpcore.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
-        <version>4.4.5</version>
+        <version>${httpcore.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore-nio</artifactId>
-        <version>4.4.5</version>
+        <version>${httpcore.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
@@ -539,7 +551,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>1.9.5</version>
+        <version>2.8.47</version>
         <scope>test</scope>
       </dependency>
       <!-- END: Test Dependencies -->
@@ -729,7 +741,7 @@
             Declaring default file encoding: UTF-8
             Enabling assertions.
            -->
-          <argLine>-Dfile.encoding=UTF-8 -ea</argLine>
+          <argLine>-Dfile.encoding=UTF-8 -ea ${surefire-extra-args}</argLine>
           <includes>
             <include>**/*Test.java</include>
             <include>**/*TestCase.java</include>
@@ -739,13 +751,14 @@
 
       <!-- Test coverage plugin. -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>${cobertura-maven-plugin.version}</version>
-        <executions>
-          <execution>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-maven-plugin.version}</version>
+	<executions>
+	  <execution>
+            <id>prepare-agent</id>
             <goals>
-              <goal>clean</goal>
+              <goal>prepare-agent</goal>
             </goals>
           </execution>
         </executions>
@@ -800,11 +813,18 @@
         </configuration>
       </plugin>
 
-      <!-- Cobertura report. -->
+      <!-- Code-coverage report. -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>${cobertura-maven-plugin.version}</version>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-maven-plugin.version}</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>report-aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
 
       <!-- findBugs report. -->
@@ -1047,6 +1067,16 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>java-9-surefire</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <surefire-extra-args>--add-modules java.xml.bind</surefire-extra-args>
+      </properties>
     </profile>
   </profiles>
 
